Update project files and components
- Updated .gitignore to exclude the new workspace file.
- Modified index.html to ensure proper formatting.
- Enhanced README with a new data strategy section.
- Adjusted Vite configuration for modern compiler settings and SCSS imports.
- Added new SVG icons for user actions and updated existing icons.
- Refactored components in the Header and Sidebar for improved layout and functionality.
- Updated styles across various components for consistency and responsiveness.
- Implemented image handling in UserDetails and Login pages for better user experience.
- Enhanced user service with improved error handling and data fetching logic.

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,4 @@ PROJECT_STATUS.md
 .cursor/*
 .cursor/rules/*
 .cursor/rules/lendsqr-rules.mdc
-Lendsqr-Frontent-Assessment.code-workspace
+Lendsqr_dashboard.code-workspace
