--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
       "@/assets/*": ["./src/assets/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
